# magazine-production-application

./: .gitignore  README.md
.cursor/rules/: backend-service-rule.mdc
docs/: Authentication_API_Specification.md  CODING_RULES.md  PRD_Magazine_Production_Application.md  Technical_Architecture_Overview.md
magazine-production-service/: README.md  pyproject.toml  requirements.txt
magazine-production-service/app/: __init__.py  main.py
magazine-production-service/app/api/: auth_dependencies.py
magazine-production-service/app/api/routers/: auth_router.py
magazine-production-service/app/core/: config.py  database.py  security.py
magazine-production-service/app/models/: user.py
magazine-production-service/app/schemas/: __init__.py  auth.py  user.py
magazine-production-service/app/scripts/: create_admin.py
magazine-production-service/app/services/: auth_service.py
magazine-production-service/app/utils/: helpers.py  logger.py
