[project]
name = "magazine-production-service"
version = "0.1.0"
description = "Authentication service for magazine production application"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Core Framework
    "fastapi>=0.115.13",
    "uvicorn[standard]>=0.32.1",
    
    # Database
    "sqlalchemy>=2.0.41",
    "aiomysql>=0.2.0",
    "pymysql>=1.1.1",
    "greenlet>=3.0.0",
    
    # Authentication & Security
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.20",
    
    # Request/Response Validation
    "pydantic>=2.10.4",
    "pydantic-settings>=2.7.0",
    
    # Utilities
    "python-dotenv>=1.0.1",
    "email-validator>=2.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.0",
    "black>=24.10.0",
    "isort>=5.13.2",
    "flake8>=7.1.1",
    "mypy>=1.9.0",
]
